--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,21 @@ aiosignal==1.3.1
 async-timeout==4.0.3
 attrs==23.2.0
 charset-normalizer==3.3.2
+contourpy==1.2.0
+cycler==0.12.1
+fonttools==4.50.0
 frozenlist==1.4.1
 idna==3.6
+kiwisolver==1.4.5
+matplotlib==3.8.3
 multidict==6.0.5
+numpy==1.26.4
+packaging==24.0
+pillow==10.2.0
 py-cord==2.4.1
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+six==1.16.0
 typing_extensions==4.9.0
 yarl==1.9.4
