--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,4 +1,4 @@
 {
-    "venvPath": "/Users/swag/.local/share/virtualenvs",
-    "venv": "mortimer-ZpxMkt8e"
+    "venvPath": "/home/shwayambu/.local/share/virtualenvs",
+    "venv": "mortimer-3h_DMRx_"
 }
